--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
     sorry but THE mobile version doesn't look good right now, <br />
     check back later :p
   </div>
+  <!-- comment>
   <div id="video">
     <video src="https://i.imgur.com/IgFfZkk.mp4" autoplay loop muted></video>
   </div>
+  <-->
   <div id="main">
     <header>
       <ul>
