Remove text about speed

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
   </div>
   </div>
   <script src="./assets/js/smooth.js"></script>
+  <!-- comment>
   <script type="text/javascript">
     var origin = 0.00;
     setInterval(function () {
@@ -80,6 +81,7 @@
       origin += 1.9;
     }, 100)
   </script>
+<-->
 </body>
 
 </html>
