add personal gitlab page link

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
           <a href="https://www.google.com/search?q=guoqiangqi"><i class="fab fa-google"></i></a>
         </li>
         <li>
-          <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+          <a href="https://guoqiangqi.github.io"><i class="fab fa-linkedin"></i></a>
+        </li>
+        <li>
+          <a href="https://gitlab.com/guoqiangqi1"><i class="fab fa-gitlab"></i></a>
         </li>
         <li>
           <a href="https://github.com/guoqiangqi"><i class="fab fa-github"></i></a>
-        </li>
-        <li>
-          <a href="https://guoqiangqi.github.io"><i class="fab fa-linkedin"></i></a>
         </li>
       </ul>
     </footer>
