Update personal page with another template

--- a/sample/sample-page.html
+++ b/sample/sample-page.html
@@ -12,25 +12,21 @@
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
   
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
-    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
-
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   <link href="./assets/favicon.ico" rel="icon">
 
-  <link rel="icon" href="https://avatars.githubusercontent.com/u/37530455" type="image/png">
-  <title>Guoqiang QI</title>  
+  <title>Title page</title>  
 
-<link href="./assets/css/main.css" rel="stylesheet"></head>
+<link href="./main.3f6952e4.css" rel="stylesheet"></head>
 
-<body class="minimal">
+<body class="">
 <div id="site-border-left"></div>
 <div id="site-border-right"></div>
 <div id="site-border-top"></div>
 <div id="site-border-bottom"></div>
-<!-- Add your content of header -->
+ <!-- Add your content of header -->
 <header>
-  <nav class="navbar  navbar-fixed-top navbar-inverse">
+  <nav class="navbar  navbar-fixed-top navbar-default">
     <div class="container">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
@@ -46,48 +42,42 @@
           <li><a href="./about.html" title="">03 : About me</a></li>
           <li><a href="./contact.html" title="">04 : Contact</a></li>
           <li><a href="./components.html" title="">05 : Components</a></li>
-
-          <li style="margin-left:50px;"><a href="https://github.com/guoqiangqi"><i class="fab fa-github"></i></a>
-          <li><a href="https://gitlab.com/guoqiangqi1"><i class="fab fa-gitlab"></i></a></li>
-          <li><a href="https://guoqiangqi.github.io"><i class="fab fa-linkedin"></i></a></li>
-          <li><a href="https://www.google.com/search?q=guoqiangqi"><i class="fab fa-google"></i></a></li>
-
         </ul>
+
 
       </div> 
     </div>
   </nav>
-</header>
-<!-- Add your site or app content here -->
-  <div class="hero-full-container background-image-container white-text-container" style="background-image: url('./assets/images/space.jpg')">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12">
-          <div class="hero-full-wrapper">
-            <div class="text-content">
-              <h1>Hello,<br>
-                <span id="typed-strings">
-                  <span>I'm QI</span>
-                  <span>An opensource enthusiast</span>
-                  <span>Working for 2012LAB of Huawei</span>
-                </span>
-                <span id="typed"></span>
-              </h1>
-            </div>
-          </div>
-        </div>
+</header> 
+<footer class="footer-container text-center">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
       </div>
     </div>
   </div>
+</footer>
 
 <script>
   document.addEventListener("DOMContentLoaded", function (event) {
-     type();
-     movingBackgroundImage();
+     navActivePage();
   });
 </script>
 
+<!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
 
-<script type="text/javascript" src="./assets/js/main.js"></script></body>
+<script>
+  (function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+      (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date(); a = s.createElement(o),
+      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+  ga('create', 'UA-XXXXX-X', 'auto');
+  ga('send', 'pageview');
+</script>
+
+--> <script type="text/javascript" src="./main.70a66962.js"></script></body>
 
 </html>
