Set title for related pages

--- a/work.html
+++ b/work.html
@@ -15,7 +15,8 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   <link href="./assets/favicon.ico" rel="icon">
 
-  <title>Title page</title>  
+  <link rel="icon" href="https://avatars.githubusercontent.com/u/37530455" type="image/png">
+  <title>Work</title>  
 
 <link href="./assets/css/main.css" rel="stylesheet"></head>
 
