--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </nav>
 </header>
 <!-- Add your site or app content here -->
-  <div class="hero-full-container background-image-container white-text-container" style="background-image: url('./assets/images/space.jpg')">
+  <div class="hero-full-container background-image-container white-text-container" style="background-image: url('./assets/images/space_low.jpg')">
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
