update messages about my works

--- a/works.html
+++ b/works.html
@@ -58,7 +58,20 @@
       <div class="col-sm-8 col-sm-offset-2 section-container-spacer">
         <div class="text-center">
           <h1 class="h2">02 : Works</h1>
-          <p>messages</p>
+          <p>
+            I graduated in 2019 with a master's degree, and then I entered the Huawei 2012 laboratory to work.
+            In the second year of graduate school, I had an internship at the Hong Kong Research Institute of Tcl Industrial Research Institute,
+            mainly responsible for the Animoji project based on deep learning.
+            At Huawei, I am mainly responsible for the optimization of open-source mathematics libraries in the field of scientific computing, such as Eigen and Numba.
+            I am also a member of Eigen.
+          </p>
+          <p>
+            I'm a open source enthusiast, familiar with Deep Learning(Object Detection)/AutoML(NAS, Darts) and Numerical Optimization.
+            I'm currently working on Eigen(member of Eigen), which is a C++ template library for linear algebra:
+            matrices, vectors, numerical solvers, and related algorithms, also is used in Tensorflow.
+            Also, i'm wroking on Numba, which is a JIT compiler that translates a subset of Python and NumPy code into fast machine code for scientific computing.
+            I own the PFLD which is an open source implementation based on Tensorflow for Face Landmark Detection.
+          </p>
         </div>
       </div>
 
@@ -76,8 +89,8 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>001/006</h4>
-                        <h3>work1</h3>
-                        <p>messages</p>
+                        <h3>Eigen</h3>
+                        <p>C++ template library for linear algebra. </p>
                         <a href="./work.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
@@ -87,8 +100,8 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>002/006</h4>
-                        <h3>work2</h3>
-                        <p>messages</p>
+                        <h3>Numba</h3>
+                        <p>Python JIT compiler for scientific computing.</p>
                         <a href="./work.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
@@ -98,8 +111,8 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>003/006</h4>
-                        <h3>work3</h3>
-                        <p>messages</p>
+                        <h3>PFLD</h3>
+                        <p>Implementation for Face Landmark Detection</p>
                         <a href="./work.html" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
