update messages about open source in work page

--- a/work.html
+++ b/work.html
@@ -67,13 +67,13 @@
         <img src="./assets/images/work001-01.jpg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">001 : title1</h1>
+            <h1 class="h2">001 : Open Source</h1>
           </div>
-          <p>messages</p>
+          <p>I am an open source enthusiast and actively participate in community contributions.</p>
 
           <blockquote>
-            <p>"quote"</p>
-            <small class="pull-right">author</small>
+            <p>"Talk is cheap, show me the code."</p>
+            <small class="pull-right">Linus Torvalds</small>
           </blockquote>
         </div>
       </div>
