--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@
                       <a href="http://www.twitter.com" title="" class="fa-icon">
                         <i class="fa fa-twitter"></i>
                       </a>
-                      <a href="http://www.linkedin.com" title="" class="fa-icon">
+                      <a href="https://www.linkedin.com/in/guoqiang-qi-47980b21b/" title="" class="fa-icon">
                         <i class="fa fa-linkedin"></i>
                       </a>
 
