--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
           <li style="margin-left:50px;"><a href="https://github.com/guoqiangqi"><i class="fab fa-github"></i></a>
           <li><a href="https://gitlab.com/guoqiangqi1"><i class="fab fa-gitlab"></i></a></li>
-          <li><a href="https://guoqiangqi.github.io"><i class="fab fa-linkedin"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/guoqiang-qi-47980b21b/"><i class="fab fa-linkedin"></i></a></li>
           <li><a href="https://www.google.com/search?q=guoqiangqi"><i class="fab fa-google"></i></a></li>
 
         </ul>
