update the navbar for index.html

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
   <link href="./assets/favicon.ico" rel="icon">
 
   <link rel="icon" href="https://avatars.githubusercontent.com/u/37530455" type="image/png">
-  <title>Guoqiang QI</title>  
-
-<link href="./assets/css/main.css" rel="stylesheet"></head>
+  <title>Guoqiang QI</title>
+  <link href="./assets/css/main.css" rel="stylesheet">
+  <link href="./assets/css/github_profile.css" rel="stylesheet">
+</head>
 
 <body class="minimal">
 <div id="site-border-left"></div>
@@ -41,17 +42,20 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Works</a></li>
-          <li><a href="./about.html" title="">03 : About me</a></li>
-          <li><a href="./contact.html" title="">04 : Contact</a></li>
-          <li><a href="./components.html" title="">05 : Components</a></li>
+          <div class="nav-url">
+            <li><a class="nav-item" href="./index.html" title="">Home</a></li>
+            <li><a class="nav-item" href="./works.html" title="">Works</a></li>
+            <li><a class="nav-item" href="./about.html" title="">About me</a></li>
+            <li><a class="nav-item" href="./contact.html" title="">Contact</a></li>
+            <li><a class="nav-item" href="./components.html" title="">Components</a></li>
+          </div>
 
-          <li style="margin-left:50px;"><a href="https://github.com/guoqiangqi"><i class="fab fa-github"></i></a>
-          <li><a href="https://gitlab.com/guoqiangqi1"><i class="fab fa-gitlab"></i></a></li>
-          <li><a href="https://www.linkedin.com/in/guoqiang-qi-47980b21b/"><i class="fab fa-linkedin"></i></a></li>
-          <li><a href="https://www.google.com/search?q=guoqiangqi"><i class="fab fa-google"></i></a></li>
-
+          <div class="nav-icon">
+            <li style="margin-left:50px;"><a class="nav-item" href="https://github.com/guoqiangqi"><i class="fab fa-github"></i></a>
+            <li><a class="nav-item" href="https://gitlab.com/guoqiangqi1"><i class="fab fa-gitlab"></i></a></li>
+            <li><a class="nav-item" href="https://www.linkedin.com/in/guoqiang-qi-47980b21b/"><i class="fab fa-linkedin"></i></a></li>
+            <li><a class="nav-item" href="https://www.google.com/search?q=guoqiangqi"><i class="fab fa-google"></i></a></li>
+          </div>
         </ul>
 
       </div> 
