--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <li><a href="./works.html" title="">02 : Works</a></li>
           <li><a href="./about.html" title="">03 : About me</a></li>
           <li><a href="./contact.html" title="">04 : Contact</a></li>
-          <li><a href="./components.html" title="">05 : Components</a></li>
+          <!-- <li><a href="./components.html" title="">05 : Components</a></li> -->
 
           <li style="margin-left:50px;"><a href="https://github.com/guoqiangqi"><i class="fab fa-github"></i></a>
           <li><a href="https://gitlab.com/guoqiangqi1"><i class="fab fa-gitlab"></i></a></li>
