--- a/contact.html
+++ b/contact.html
@@ -81,19 +81,14 @@
                           <span class="fa-icon">
                             <i class="fa fa-phone" aria-hidden="true"></i>
                           </span>
-                          + 151-****-4963
+                          +86 151-****-4963
                         </li>
                         <li>
                           <span class="fa-icon">
-                            <i class="fa fa-at" aria-hidden="true"></i>
+                            <i class="fa fa-envelope-o" aria-hidden="true"></i>
                           </span>
-                          guoqiang.qi1@gmail.com
-                        </li>
-                        <li>
-                          <span class="fa-icon">
-                            <i class="fa fa-at" aria-hidden="true"></i>
-                          </span>
-                          qiguoqiang2@huawei.com
+                          guoqiang.qi1@gmail.com </br>
+                          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;qiguoqiang2@huawei.com
                         </li>
                         <li>
                           <span class="fa-icon">
